CHANGELOG for Close Combat Free.

Quite a lot of basic engine stuff was done before this changelog was created. Some more history can be devised from git sources (although even there, the thing is not complete).

=== === === ===
27.11.2011:
 - context menu now openes on mouse hold in mobile mode
 - double click in roster now opens context menu 

26.11.2011:
 - add drag&drop for OrderMarkers
 - add order cancelling
 - add map scrolling
 - add some keyboard shortcuts
 - add active pause

25.11.2011:
 - fix group orders mixing their targets
 - add desktop mode and mobile mode (initial, simple implementation. There are plans to make it much
   more robust)

24.11.2011:
 - move trialengine2d out of trial and into master

20.11.2011:
 - add order markers

19.11.2011:
 - add new type of turret: TurretImage (it is composed of Image elements,
   not Rectangle ones. It has almost the same code, as Turret.
   A common ancestor will probably be created later)
 - add unified path searching (by means of a PWD root property)
 - add group orders (assigning orders to all selected units at once)
 - add unit selection in both game area AND roster

18.11.2011:
 - add initial modularity to tanks. Tanks should be now more easy to modify.
   Creating new tanks should also be easier. This still needs some fixing,
   as turrets are not as shiny, as they could

17.11.2011:
 - add rubber band unit selection, with modifiers

16.11.2011:
 - add unit selection, with support for modifiers

15.11.2011:
 - add smoke implementation
 - fix mixing fire commands by game logic
 - add support for multiple Effect animations playing at the same time
   (using one Timer and multiple Effect.qml objects)

14.11.2011:
 - add moving fast, sneaking movements implementation
 - add generic unit object, move most of the code from test tank
 - add status messages
 - (and all the rest from git, that is everything older than
   commit 35de2ddac6d3118c0bfcd5f86328ca71fe22a1c5)